--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-  max-width: 1184px;
+  max-width: calc(100% - 96px);
   margin: 0 auto;
   padding-top: 92px;
 }
@@ -7,6 +7,7 @@
 @media screen and (max-width:1024px) {
   .cover {
     max-width: 100%;
+    margin: 0;
   }   
 }
 
