--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  max-width: 1184px;
+  max-width: calc(100% - 96px);
   margin: 0 auto;
   padding-bottom: 24px;
   padding-top: 92px;
@@ -10,15 +10,22 @@
 
 
 
-@media  screen and (max-width: 768px) {
+@media  screen and (max-width: 1024px) {
   .footer {
-    max-width: calc(100% - 48px);
+    max-width: calc(100% - 96px);
   } 
 }
 
+@media screen and (max-width: 768px) {
+   .footer {
+     max-width: calc(100% - 48px);
+  }
+}
 
 @media screen and (max-width: 767px) {
   .footer {
+    max-width: calc(100% - 32px);
+    padding-top: 64px;
     flex-direction: column;
     align-items: flex-start;
   }
