--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,9 @@
 .header__lang-link {
-  text-align: right;
   color: white;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 400;
+  text-align: right;
   margin: 0;
   text-decoration: none;
   transition: opacity .2s linear;
@@ -8,4 +11,12 @@
 
 .header__lang-link:hover {
     opacity: 0.7;
+}
+
+@media screen and (max-width: 768px){
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
+  
 }
