--- a/blocks/intro/__list/Intro__list.css
+++ b/blocks/intro/__list/Intro__list.css
@@ -1,10 +1,9 @@
 .intro__list {
   list-style-type: none;
-  color: white;
   margin: 33px 0 0 0;
   padding: 0;
   font-size: 12px;
   line-height: 18px;
   max-width: 690px;
-  font-weight: bold;
+  font-weight: 400;
 }
