--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,7 @@
 .intro__text {
-  color: white;
   margin: 40px 0 0 0;
   max-width: 690px;
+  font-weight: 400;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 26.08px;
 }
