--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,22 +1,12 @@
 .intro__title {
-  max-width: 690px;
   font-size: 54px;
   line-height: 58px;
-  color: white;
+  font-weight: 900;
   margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .intro__title {
-    max-width: 720px;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .intro__title {
-    max-width: 288px;
-    margin: 0 auto;
     font-size: 32px;
     line-height: 35px;
   }
