--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 767px) {
   .lead__title {
-    max-width: 100%;
+    max-width: 288px;
     font-size: 40px;
     line-height: 44px;
   }
