--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 1024px) {
   .lead {
-    max-width: 928px;
+    max-width: calc(100% - 96px);
     padding-top: 48px;
   }
 }
