--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   max-width: calc(100% - 96px);
-  height: 52px;
+  max-height: 52px;
   margin: 0 auto;
   padding-top: 28px;
   display: flex;
@@ -18,5 +18,6 @@
   .header {
     max-width: calc(100% - 32px);
     padding-top: 16px;
+    max-height: 42px;
   } 
 }
